<resources>
    <string name="app_name">CustomView Assignment</string>
    <string name="lbl_omp_dashboard">OMP Dashboard</string>
    <string name="lbl_in_progress">In Progress</string>
    <string name="lbl_create_additional_pages">Create additional pages</string>
    <string name="lbl_tasks">Tasks</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_create_a_new_task">Create A New Task</string>
    <string name="lbl_client">Client</string>
    <string name="lbl_project_name">Project Name</string>
    <string name="lbl_deadline">DeadLine</string>
    <string name="lbl_assignee">Assignee</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_attachments">Attachments</string>
    <string name="lbl_create_task">Create Task</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_close_tasks">Close Tasks</string>
    <string name="lbl_open_tasks">Open Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>